// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`inspectCommand should fail with no result 2`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "MYSQL",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "error",
      "Could not find any results for nothing_here",
    ],
  ],
  "promptArgsCalls": Array [
    Array [],
  ],
}
`;

exports[`inspectCommand should fail with unexisting config name 2`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "DOES_NOT_EXIST",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "error",
      "No service found for DOES_NOT_EXIST",
    ],
    Array [
      "error",
      "try debugging with the DEBUG=whook env.",
    ],
  ],
  "promptArgsCalls": Array [
    Array [],
  ],
}
`;

exports[`inspectCommand should work with an unexisting config but a default value 2`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "DOES_NOT_EXIST",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "error",
      "No service found for DOES_NOT_EXIST",
    ],
    Array [
      "error",
      "try debugging with the DEBUG=whook env.",
    ],
    Array [
      "info",
      "\\"v8\\"",
    ],
  ],
  "promptArgsCalls": Array [
    Array [],
  ],
  "result": undefined,
}
`;

exports[`inspectCommand should work with no query at all 2`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "MYSQL",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "info",
      "{\\"auth\\":{\\"username\\":\\"root\\"},\\"version\\":\\"2.1.1\\"}",
    ],
  ],
  "promptArgsCalls": Array [
    Array [],
  ],
  "result": undefined,
}
`;

exports[`inspectCommand should work with no result but a default value 2`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "MYSQL",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "error",
      "Could not find any results for nothing_here",
    ],
    Array [
      "info",
      "\\"v8\\"",
    ],
  ],
  "promptArgsCalls": Array [
    Array [],
  ],
  "result": undefined,
}
`;

exports[`inspectCommand should work with one value 2`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "MYSQL",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "info",
      "\\"root\\"",
    ],
  ],
  "promptArgsCalls": Array [
    Array [],
  ],
  "result": undefined,
}
`;

exports[`inspectCommand should work with several values 2`] = `
Object {
  "injectorCalls": Array [
    Array [
      Array [
        "MYSQL",
      ],
    ],
  ],
  "logCalls": Array [
    Array [
      "info",
      "\\"root\\"",
    ],
  ],
  "promptArgsCalls": Array [
    Array [],
  ],
  "result": undefined,
}
`;
